fix cut off code
for new admonition blocks
can't figure out how to change the icon color, but this changes side bar and title bar

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -152,14 +152,16 @@ a:active {
 }
 
 .md-typeset .admonition.output, .md-typeset details.output {
-        border-left: .4rem solid #5e5cc1;
+    border-left: .2rem solid #5e5cc1;
 }
-.md-typeset .admonition.output>.admonition-title, .md-typeset details.output>.admonition-title, .md-typeset det$
+.md-typeset .admonition.output>.admonition-title, .md-typeset details.output>.admonition-title, .md-typeset details.output>summary {
     background-color: rgba(170, 0, 255, .1);
 }
 
+
 .md-typeset .admonition.snakemake, .md-typeset details.snakemake {
-        border-left: .4rem solid #24b72c;
+    border-left: .2rem solid #24b72c;
 }
-.md-typeset .admonition.snakemake>.admonition-title, .md-typeset details.snakemake>.admonition-title, .md-types$
+.md-typeset .admonition.snakemake>.admonition-title, .md-typeset details.snakemake>.admonition-title, .md-typeset details.snakemake>summary {
     background-color: rgba(223, 242, 222, 1);
+}
